--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ textual = "^1.0.0"
 toml = "^0.10.2"
 hat-peg = "^0.5.9"
 mypy = "^1.13.0"
+asyncio = "^3.4.3"
 
 [tool.poetry.scripts]
 ck = 'main.py:main'
