--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ toml = "^0.10.2"
 hat-peg = "^0.5.9"
 mypy = "^1.13.0"
 asyncio = "^3.4.3"
+types-psutil = "^6.1.0.20241102"
+psutil = "^6.1.0"
 
 [tool.poetry.scripts]
 ck = 'main.py:main'
