--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ mypy = "^1.13.0"
 asyncio = "^3.4.3"
 types-psutil = "^6.1.0.20241102"
 psutil = "^6.1.0"
+black = "^24.10.0"
+python-lsp-server = "^1.12.0"
 
 [tool.poetry.scripts]
 ck = 'main.py:main'
