--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ types-psutil = "^6.1.0.20241102"
 psutil = "^6.1.0"
 black = "^24.10.0"
 python-lsp-server = "^1.12.0"
+pytest = "^8.3.4"
 
 [tool.poetry.scripts]
 ck = 'main.py:main'
